# logger

./: .gitignore  CMakeLists.txt  Constants.h  README.md  filelogger.h  logger.cpp  logger.h
logger/: CMakeLists.txt
logger/src/: logger.cpp
src/: Constants.h  logger.h
tests/: CMakeLists.txt  globaltests.h  inputtests.h  lib.h
